<?xml version="1.0"?>
<package format="2">
  <name>py_faster_rcnn_ros</name>
  <version>0.1.0</version>
  <description>The py-faster-rcnn ROS wrapper package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>

  <license>RCTA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>py-faster-rcnn</exec_depend>
  <exec_depend>python_scikit_image</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>wm_od_interface_msgs</exec_depend>

</package>
